--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "incolume-py-mailing"
-version = "0.1.0"
+version = "1.0.0a0"
 description = "Ferramenta para envio de mailing"
 authors = ["Britodfbr <britodfbr@gmail.com>"]
 license = "GPL3"
